// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TapStack Unit Tests Stack Configuration and Synthesis TapStack should instantiate with custom props and match snapshot 1`] = `
"{
  "output": {
    "ec2SecurityGroupId": {
      "description": "The ID of the EC2 Security Group.",
      "value": "mock-ec2-sg-id"
    },
    "privateSubnetId": {
      "description": "The ID of the private subnet.",
      "value": "mock-private-subnet-1"
    },
    "publicSubnetIds": {
      "description": "The IDs of the public subnets.",
      "value": "mock-public-subnet-1, mock-public-subnet-2"
    },
    "vpcId": {
      "description": "The ID of the main VPC.",
      "value": "mock-vpc-id"
    }
  },
  "provider": {
    "aws": [
      {
        "default_tags": [
          {
            "tags": {
              "Environment": "Production",
              "Project": "TAP"
            }
          }
        ],
        "region": "us-west-2"
      }
    ]
  },
  "terraform": {
    "backend": {
      "s3": {
        "bucket": "my-custom-state-bucket",
        "encrypt": true,
        "key": "prod/TestCustomStack.tfstate",
        "region": "us-east-1",
        "use_lockfile": true
      }
    },
    "required_providers": {
      "aws": {
        "source": "aws",
        "version": "6.4.0"
      }
    }
  }
}"
`;

exports[`TapStack Unit Tests Stack Configuration and Synthesis TapStack should instantiate with default props and match snapshot 1`] = `
"{
  "output": {
    "ec2SecurityGroupId": {
      "description": "The ID of the EC2 Security Group.",
      "value": "mock-ec2-sg-id"
    },
    "privateSubnetId": {
      "description": "The ID of the private subnet.",
      "value": "mock-private-subnet-1"
    },
    "publicSubnetIds": {
      "description": "The IDs of the public subnets.",
      "value": "mock-public-subnet-1, mock-public-subnet-2"
    },
    "vpcId": {
      "description": "The ID of the main VPC.",
      "value": "mock-vpc-id"
    }
  },
  "provider": {
    "aws": [
      {
        "default_tags": [
        ],
        "region": "us-east-1"
      }
    ]
  },
  "terraform": {
    "backend": {
      "s3": {
        "bucket": "iac-rlhf-tf-states",
        "encrypt": true,
        "key": "dev/TestDefaultStack.tfstate",
        "region": "us-east-1",
        "use_lockfile": true
      }
    },
    "required_providers": {
      "aws": {
        "source": "aws",
        "version": "6.4.0"
      }
    }
  }
}"
`;
